--- a/frontend/todolist/src/app/app.component.html
+++ b/frontend/todolist/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<h1 class = "text-center"> ToDoListApp 10/16/22 </h1>
-<app-listitem></app-listitem>
+<!-- <h1 class = "text-center"> ToDoListApp 10/16/22 </h1> -->
+<router-outlet></router-outlet>
+<!-- <app-listitem></app-listitem> -->
