--- a/frontend/todolist/src/app/listitem/listitem.component.html
+++ b/frontend/todolist/src/app/listitem/listitem.component.html
@@ -16,6 +16,7 @@
           </tr>
         </tbody>
       </table>
+    </div>
   </div>
-
+  <button type="button" class="btn btn-success" (click)="btnClick();">Add New</button>
 </div>
