--- a/frontend/todolist/src/app/listitem/listitem.component.html
+++ b/frontend/todolist/src/app/listitem/listitem.component.html
@@ -1,22 +1,25 @@
-<div class="container">
-  <div class="card">
+
+  <div class="container">
     <h3 class="text-center"> To do List</h3>
-    <div class="card-body">
-      <table class="table table-striped">
-        <thead>
-          <th> Title </th>
-          <th> Description </th>
-          <th> Do By </th>
-        </thead>
-        <tbody>
-          <tr *ngFor = "let list of listitem">
-            <td>{{list.title}}</td>
-            <td>{{list.description}}</td>
-            <td>{{list.doBy}}</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="card">
+      <div class="card-body">
+        <table class="table table-striped">
+          <thead>
+            <th> Title </th>
+            <th> Description </th>
+            <th> Do By </th>
+          </thead>
+          <tbody>
+            <tr *ngFor = "let list of listitem">
+              <td>{{list.title}}</td>
+              <td>{{list.description}}</td>
+              <td>{{list.doBy}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <button type="button" class="btn btn-success" (click)="btnClick();">Add</button>
     </div>
   </div>
-  <button type="button" class="btn btn-success" (click)="btnClick();">Add New</button>
-</div>
+
+
