--- a/frontend/todolist/src/app/additem/additem.component.css
+++ b/frontend/todolist/src/app/additem/additem.component.css
@@ -26,11 +26,12 @@ input {
   border: none;
 }
 .btn{
-  display: flex;
+  /* display: flex; */
+  float: right;
+  display: inline-block;
   align-items:left;
   width: 10%;
   justify-content: center;
-  margin-left: auto;
-  margin-right: 0%;
-  margin-bottom: 2%;
+  margin: 2px;
 }
+
