--- a/frontend/todolist/src/app/additem/additem.component.html
+++ b/frontend/todolist/src/app/additem/additem.component.html
@@ -17,7 +17,9 @@
       <small id="titleHelp" class="form-text text-muted"> Enter a do by date in format shown (optional)</small>
     </div>
     <div class="form-group">
-      <button type="button" class="btn btn-success" (click)="btnClick();">Add</button>
+      <button type="button" class="btn btn-success" (click)="btnAdd();">Add</button>
+      <button type="button" class="btn btn-danger back" (click)="btnBack();">Back</button>
+
     </div>
   </form>
 
