--- a/frontend/todolist/src/app/additem/additem.component.css
+++ b/frontend/todolist/src/app/additem/additem.component.css
@@ -3,8 +3,7 @@ input {
 
   border: 1px solid black;
 }
-
-.container {
+#item-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
