--- a/frontend/todolist/src/app/additem/additem.component.html
+++ b/frontend/todolist/src/app/additem/additem.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="parent">
+  <div class="container">
   <form [formGroup]="addItemForm" id="item-form">
     <h3 class="text-center"> Add New Thing To Do </h3>
     <div class="form-group">
@@ -32,4 +33,5 @@
     </div>
   </form>
 
+  </div>
 </div>
